# hackathon2

./: .gitignore  CLAUDE.md  HACKATHON2.md  PROJECT_LINKS.md  tmpclaude-89ba-cwd
.claude/skills/: fastapi-backend.skill  nextjs-frontend.skill
.claude/skills/better-auth/: SKILL.md
.claude/skills/fastapi-backend/: SKILL.md
.claude/skills/neon-database/: SKILL.md
.claude/skills/nextjs-frontend/: SKILL.md
.claude/skills/test-first/: SKILL.md
.specify/memory/: constitution.md
history/prompts/001-todo-console-app/: 0001-create-todo-console-app-spec.spec.prompt.md  0002-clarify-todo-app-edge-cases.spec.prompt.md  0003-plan-todo-console-app.plan.prompt.md  0004-generate-tasks-for-todo-console-app.tasks.prompt.md  0005-cross-artifact-analysis-todo-console-app.misc.prompt.md  0006-implement-phase-i-console-app.green.prompt.md
history/prompts/002-todo-fullstack-webapp/: 0001-create-phase2-todo-fullstack-spec.spec.prompt.md  0002-clarify-fullstack-webapp-spec.spec.prompt.md  0003-implement-phase2-fullstack-webapp.green.prompt.md  0003-plan-todo-fullstack-webapp.plan.prompt.md  0004-generate-tasks-for-fullstack-webapp.tasks.prompt.md  0005-cross-artifact-analysis-fullstack-webapp.misc.prompt.md  0006-create-nextjs-frontend-skill.misc.prompt.md  0007-create-neon-database-skill.misc.prompt.md  0008-create-better-auth-skill.misc.prompt.md  0009-cross-artifact-analysis-todo-fullstack.misc.prompt.md  0010-remediate-analysis-findings.misc.prompt.md  0011-create-test-first-tdd-skill.misc.prompt.md  0012-implement-phase4-through-phase10.green.prompt.md  0013-phase2-implementation-test-fixes.green.prompt.md  0014-complete-phase10-polish-tasks.green.prompt.md  0015-commit-phase2-and-create-pr.green.prompt.md
history/prompts/general/: 0001-git-commit-and-pr-creation.general.prompt.md  0002-add-agent-skills-mandate.general.prompt.md
phase1/: CLAUDE.md  README.md  pyproject.toml
phase1/src/: __init__.py  main.py  models.py  operations.py  storage.py
phase1/tests/: __init__.py  test_models.py  test_operations.py  test_storage.py
phase2/: CLAUDE.md  README.md  docker-compose.yml  test_app.py
phase2/.claude/: settings.local.json
phase2/backend/: .env.example  Dockerfile  pyproject.toml  test.db  todo.db
phase2/backend/migrations/: 001_create_tasks.sql
phase2/backend/src/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py
phase2/backend/src/routes/: health.py  tasks.py
phase2/backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_get.py  test_tasks_list.py  test_tasks_toggle.py  test_tasks_update.py
phase2/frontend/: .env.example  Dockerfile  auth.db  auth.ts  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/002-todo-fullstack-webapp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+55 files in other folders)
